fix: Don't make accordion text overlap with icons

--- a/style.css
+++ b/style.css
@@ -684,6 +684,10 @@ button {
 }
 
 /* Custom Accordation */
+.accordion-button {
+  padding-right: 2.5rem;
+}
+
 .accordion-button::before {
   content: "";
   width: 14px;
